tests/cases/compile_fail/gfx_bad_types.lsc
main() -> i64 do
  declare g = gfx_new("4", 4)
  return 0
end
